# CAPS-analyzer

./: README.md  TO-DO
cmake/Modules/: FindCCfits.cmake  FindCFitsio.cmake  FindGOMP.cmake  FindGSL.make  FindHealPIX.cmake  FindPackageHandleCompat.cmake  Findgdal.cmake  Findlunar.cmake
doc/: Data flow and project class structure.odt
src/UIs/CAPS-analyzer/: CAPS-analyzer.kdev4  CMakeLists.txt  controldatadlg.cpp  controldatadlg.h  controldatadlg.ui  coorddlg.ui  efiledlg.cpp  efiledlg.h  egretdlg.ui  egretselectiondlg.ui  energydlg.cpp  energydlg.h  energydlg.ui  graphdlg.cpp  graphdlg.h  graphdlg.ui  graphselectdlg.cpp  graphselectdlg.h  graphselectdlg.ui  healpixdlg.cpp  healpixdlg.h  healpixdlg.ui  informationdlg.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  maplayoutdlg.ui  mapperdlg.cpp  mapperdlg.h  mapperdlg.ui  mapselectdlg.cpp  mapselectdlg.h  mapselectdlg.ui  mollweidedlg.ui  pixelinfodlg.ui  pixelizerdlg.cpp  pixelizerdlg.h  pixelizerdlg.ui  (+13 more)
src/UIs/CAPS-analyzer/.kdev4/: CAPS-analyzer.kdev4
src/UIs/CAPS-analyzer/icons/: CMakeLists.txt
src/libanalyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  association.cpp  association.h  atypes.h  basedata.cpp  basedata.h  csvmanager.cpp  csvmanager.h  cubedata.cpp  cubedata.h  filemanager.cpp  filemanager.h  fitsmanager.cpp  fitsmanager.h  healpix.cpp  healpix.h  inputmatrixdata.cpp  inputmatrixdata.h  libanalyzer.kdev4  matrixdata.cpp  matrixdata.h  pixelizer.cpp  pixelizer.h  rsht.cpp  rsht.h  spectrum.cpp  spectrum.h  transformer.cpp  transformer.h  vectordata.cpp  vectordata.h
src/libanalyzer/.kdev4/: libanalyzer.kdev4
src/libgraphics/: CMakeLists.txt  coordtransformer.cpp  coordtransformer.h  datamap.cpp  datamap.h  dataspectrum.cpp  dataspectrum.h  font_mroman.cpp  font_roman.cpp  gdalmapper.cpp  gdalmapper.h  grapher.cpp  grapher.h  graphics.cpp  graphics.h  libgraphics.kdev4  mapper.cpp  mapper.h  mollweide.cpp  mollweide.h  progress.cpp  progress.h  projmapper.cpp  projmapper.h  raster.cpp  raster.h  stroke_font.h
src/libgraphics/.kdev4/: libgraphics.kdev4
